# windows-chewing

./: CMakeLists.txt
ChewingIME/: ChewingIME.vcproj  IMEUI.cpp
ChewingServer/: ChewingServerUTF8.vcproj  chewing.cpp
HashEd-UTF8/: HashEd-UTF8.vcproj  Pho2Chewing.h
Include/: Chewingpp.h  config.h.in
cmake/: config.h.in
